--- a/app/views/factory/agent/productions/index.html+phone.erb
+++ b/app/views/factory/agent/productions/index.html+phone.erb
@@ -1,1 +1,3 @@
-<%= render partial: 'card', collection: @productions, as: :model, locals: { item_con: 'trade/agent/items' } %>
+<div class="weui-panel is-box mt-3">
+  <%= render partial: 'card', collection: @productions, as: :model, locals: { item_con: 'trade/agent/items' } %>
+</div>
