--- a/app/views/admin/_add_purchase_cart_assign.html.erb
+++ b/app/views/admin/_add_purchase_cart_assign.html.erb
@@ -2,7 +2,7 @@
   <td>
     <%= form_with theme: nil, url: { controller: 'factory/in/items', action: 'create' }, class: 'button_to' do |f| %>
       <%= f.hidden_field :current_cart_id, value: @cart.id %>
-      <%= f.hidden_field :good_type, value: model.class_name %>
+      <%= f.hidden_field :good_type, value: model.base_class_name %>
       <%= f.hidden_field :purchase_id, value: model.id %>
       <%= f.hidden_field :good_id, value: nil %>
       <%= button_tag do %>
