--- a/app/views/factory/our/productions/_members/_add_cart.html.erb
+++ b/app/views/factory/our/productions/_members/_add_cart.html.erb
@@ -2,7 +2,7 @@
 <span class="has-text-danger pr-2"><%= model.price.to_money.format.html_safe %></span>
 
 <%= form_with theme: nil, url: { controller: 'trade/our/items', action: 'create' }, state: 'redirect_return', data: { turbo_scroll: true }, class: 'button_to' do |f| %>
-  <%= f.hidden_field :good_type, value: model.class_name %>
+  <%= f.hidden_field :good_type, value: model.base_class_name %>
   <%= f.hidden_field :good_id, value: model.id %>
   <%= f.hidden_field :produce_on, value: params[:produce_on] %>
   <%= f.hidden_field :scene_id, value: params[:scene_id] %>
