--- a/app/views/factory/productions/_dialog/_cartx.htmlx.erb
+++ b/app/views/factory/productions/_dialog/_cartx.htmlx.erb
@@ -15,7 +15,7 @@
 
 <%= form_with theme: nil, url: { controller: 'factory/my/items', action: 'create' }, data: { turbo_scroll: true }, class: 'button_to' do |f| %>
   <%= f.hidden_field :member_id, value: current_member&.id %>
-  <%= f.hidden_field :good_type, value: model.class_name %>
+  <%= f.hidden_field :good_type, value: model.base_class_name %>
   <%= f.hidden_field :good_id, value: model.id %>
   <%= f.hidden_field :produce_on, value: params[:produce_on] %>
   <%= f.hidden_field :scene_id, value: params[:scene_id] %>
