--- a/app/views/factory/productions/_rent/_cart.html.erb
+++ b/app/views/factory/productions/_rent/_cart.html.erb
@@ -23,7 +23,7 @@
 <% end if item %>
 
 <%= form_with theme: nil, url: { controller: item_con, action: 'create' }, state: 'redirect_return', data: { turbo_scroll: true }, class: 'button_to' do |f| %>
-  <%= f.hidden_field :good_type, value: model.class_name %>
+  <%= f.hidden_field :good_type, value: model.base_class_name %>
   <%= f.hidden_field :good_id, value: model.id %>
   <%= f.hidden_field :number, value: 1 %>
   <%= f.hidden_field :aim, value: 'rent' %>
