--- a/app/views/factory/agent/productions/_index/_card.html+phone.erb
+++ b/app/views/factory/agent/productions/_index/_card.html+phone.erb
@@ -1,14 +1,14 @@
 <div class="media box">
-  <div class="media-left">
-    <figure class="image is-1by1">
-      <%= image_tag model.product.logo if model.product.logo.attached? %>
+  <div class="media-left as-logo">
+    <figure class="image is-64x64 is-1by1">
+      <%= image_tag model.logo if model.logo.attached? %>
     </figure>
   </div>
   <div class="media-content">
     <h2 class="title has-text-danger"><%= model.price.to_money.format.html_safe %></h2>
     <%= link_to model.name, { action: 'show', id: model.id } %>
   </div>
-  <div class="media-right">
+  <div class="media-right as-x">
   <% if item = @cart && @cart.find_item(good_id: model.id) %>
     <%= render partial: 'cart', locals: { cart: @cart, item_con: item_con, item: item } %>
   <% else %>
