--- a/app/views/factory/productions/_base/_no_more.html.erb
+++ b/app/views/factory/productions/_base/_no_more.html.erb
@@ -1,3 +1,3 @@
-<div class="is-middle is-flex-grow-1">
+<div class="has-column-centered is-flex-grow-1">
   <p class="has-text-centered has-text-grey">没有更多了</p>
 </div>
