--- a/app/views/factory/agent/productions/_index/_card.html+phone.erb
+++ b/app/views/factory/agent/productions/_index/_card.html+phone.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="media-content">
     <h2 class="title has-text-danger"><%= model.price.to_money.format.html_safe %></h2>
-    <%= link_to model.name, { action: 'show', id: model.id } %>
+    <p><%= model.name %></p>
   </div>
   <div class="media-right as-x">
   <% if item = @cart && @cart.find_item(good_id: model.id) %>
