--- a/app/views/factory/admin/produce_plans/_products/_index_tbody.html.erb
+++ b/app/views/factory/admin/produce_plans/_products/_index_tbody.html.erb
@@ -3,7 +3,7 @@
 <td><%= model.price.to_money.format.html_safe %></td>
 <td>
   <div class="is-flex is-align-items-center">
-    <%= button_to({ controller: 'production_plans', action: 'update', production_id: model.id, id: production_plan.id }, method: :patch, params: { '[production_plan]planned_count': production_plan.planned_count - 1 }, class: 'mr-1') do %>
+    <%= button_to({ controller: 'production_plans', action: 'update', production_id: model.id, id: production_plan.id }, method: :patch, params: { 'production_plan[planned_count]': production_plan.planned_count - 1 }, class: 'mr-1') do %>
       <i class="fa-solid fa-circle-minus fa-2x"></i>
     <% end if production_plan && production_plan.planned_count > 1 %>
     <%= button_to({ controller: 'production_plans', action: 'destroy', production_id: model.id, id: production_plan.id }, method: :delete, class: 'mr-1') do %>
@@ -15,7 +15,7 @@
     <%= button_to({ controller: 'production_plans', action: 'create', production_id: model.id }, params: { 'production_plan[scene_id]': @produce_plan.scene_id, 'production_plan[produce_on]': @produce_plan.produce_on }, class: 'ml-1') do %>
       <i class="fa-solid fa-circle-plus fa-2x has-text-grey"></i>
     <% end unless production_plan %>
-    <%= button_to({ controller: 'production_plans', action: 'update', production_id: model.id, id: production_plan.id }, method: :patch, params: { '[production_plan]planned_count': production_plan.planned_count + 1 }, class: 'ml-1') do %>
+    <%= button_to({ controller: 'production_plans', action: 'update', production_id: model.id, id: production_plan.id }, method: :patch, params: { 'production_plan[planned_count]': production_plan.planned_count + 1 }, class: 'ml-1') do %>
       <i class="fa-solid fa-circle-plus fa-2x"></i>
     <% end if production_plan %>
   </div>
