--- a/app/views/factory/agent/productions/_index/_card.html+phone.erb
+++ b/app/views/factory/agent/productions/_index/_card.html+phone.erb
@@ -5,7 +5,7 @@
     </figure>
   </div>
   <div class="media-content">
-    <h5 class="title"><%= model.name %></h5>
+    <h2 class="title is-6"><%= model.name %></h2>
     <strong class="has-text-danger"><%= model.price.to_money.format.html_safe %></strong>
   </div>
   <div class="media-right as-x">
