--- a/app/views/factory/admin/productions/index.html.erb
+++ b/app/views/factory/admin/productions/index.html.erb
@@ -2,6 +2,6 @@
 <%= render 'index_bar' %>
 <%= render 'index_actions' %>
 
-<%= render layout: 'index_table' do %>
+<%= render layout: 'index_raw_table' do %>
   <%= render partial: 'index_tbody', layout: 'index_tr', collection: @productions, as: :model %>
 <% end %>
