--- a/app/views/factory/admin/base/_production_breadcrumb.html.erb
+++ b/app/views/factory/admin/base/_production_breadcrumb.html.erb
@@ -9,9 +9,5 @@
 </li>
 <li><%= link_to t('.products.index.title'), { controller: 'taxon/products', product_taxon_id: @production.product_taxon_id, anchor: "tr_#{@production.product_id}" } %></li>
 <li><span class="px-3"><%= @production.product.name %></span></li>
-<li>
-  <%= link_to({ controller: 'productions', product_id: @production.product_id }) do %>
-    <span><%= t('.productions.index.title') %></span>
-    <span>（<%= @production.name %>）</span>
-  <% end %>
-</li>
+<li><%= link_to t('.productions.index.title'), { controller: 'productions', product_id: @production.product_id } %></li>
+<li><span class="px-3"><%= @production.name %></span></li>
