--- a/app/views/factory/admin/products/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_base/_index_tbody.html.erb
@@ -1,16 +1,23 @@
-<td><i class="fa-solid fa-fw fa-bars has-text-grey is-drawable"></i></td>
 <td>
-  <%= link_to({ controller: 'productions', product_id: model.id }, text: true, class: 'is-several') do %>
+  <div class="is-several">
     <%= image_tag model.logo.variant(resize_to_limit: [32, 32]), class: 'image is-32x32' if model.logo.attached? %>
-    <span><%= model.name %></span>
-  <% end %>
-</td>
-<td><%= model.description.to_s.truncate(27) %></td>
-<td>
-  <p><%= model.brand&.name %></p>
+    <%= link_to({ controller: 'productions', product_id: model.id }, text: true) do %>
+      <span><%= model.name %></span>
+    <% end %>
+  </div>
 </td>
 <td>
-  <%= model.covers_attachments.size %>
+<% model.productions.each do |production| %>
+  <p><%= production.name %></p>
+<% end %>
+</td>
+<td>
+<% model.productions.each do |production| %>
+  <p><%= production.stock %></p>
+<% end %>
+</td>
+<td>
+  <p><%= model.product_taxon.name %></p>
 </td>
 <td>
   <% model.product_part_taxons.each do |product_part_taxon| %>
@@ -26,7 +33,7 @@
   </p>
 </td>
 <td>
-  <%= link_to({ controller: 'productions', product_id: model.id }, text: true) do %>
-    <span><%= model.productions_count %></span>
+  <%= link_to({ controller: 'fits', product_id: model.id }, class: 'button is-small is-rounded is-light') do %>
+    <span class="pl-1"><%= model.fits_count %></span>
   <% end %>
 </td>
