--- a/app/views/factory/admin/productions/_taxon/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_taxon/_index_tbody.html.erb
@@ -1,7 +1,7 @@
 <td>
   <div class="is-several">
     <%= image_tag model.logo, class: 'image is-24x24' if model.logo.attached? %>
-    <span><%= model.name %></span>
+    <span><%= model.title %></span>
     <span class="tag"><%= model.state_i18n %></span>
   </div>
   <p class="has-text-grey"><%= model.qr_code %></p>
