--- a/app/views/factory/admin/products/_base/_index_tr.html.erb
+++ b/app/views/factory/admin/products/_base/_index_tr.html.erb
@@ -2,6 +2,9 @@
   <%= yield %>
   <td>
     <div data-show-target="item" style="visibility: hidden">
+      <%= button_to({ action: 'show', id: model.id, product_taxon_id: model.product_taxon_id }, aria: { label: t('.show.title') }, class: 'button is-small is-rounded is-light') do %>
+        <i class="fa-solid fa-circle-info has-text-info"></i>
+      <% end %>
       <%= button_to({ action: 'edit', id: model.id, product_taxon_id: model.product_taxon_id }, aria: { label: t('.edit.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-pencil has-text-link"></i>
       <% end %>
