--- a/app/views/factory/admin/productions/_taxon/_index_thead.html.erb
+++ b/app/views/factory/admin/productions/_taxon/_index_thead.html.erb
@@ -1,8 +1,8 @@
 <th colspan="2">
   <p><%= Factory::Production.human_attribute_name(:name) %></p>
-  <p class="has-text-grey"><%= Factory::Production.human_attribute_name(:qr_code) %></p>
+  <p><%= Factory::Production.human_attribute_name(:qr_code) %></p>
 </th>
-<th class="has-text-right">
+<th>
   <p><%= Factory::Production.human_attribute_name(:cost_price) %></p>
   <p><%= Factory::Production.human_attribute_name(:profit_price) %></p>
   <p><%= Factory::Production.human_attribute_name(:price) %></p>
