--- a/app/views/factory/productions/_index/_tab_bar_footer.html.erb
+++ b/app/views/factory/productions/_index/_tab_bar_footer.html.erb
@@ -1,3 +1,3 @@
 <div class="is-shadow">
-  <%= render 'cart_nav' if @cart %>
+  <%= render partial: 'cart_nav', locals: { cart: @cart } if @cart %>
 </div>
