--- a/app/views/factory/agent/productions/_index/_tab_bar_footer.html+phone.erb
+++ b/app/views/factory/agent/productions/_index/_tab_bar_footer.html+phone.erb
@@ -1,3 +1,3 @@
 <div class="is-shadow">
-  <%= render partial: 'cart_nav', locals: { cart_con: 'trade/agent/carts' } if @cart %>
+  <%= render partial: 'cart_nav', locals: { cart_con: 'trade/agent/carts', cart: @cart } if @cart %>
 </div>
