--- a/app/views/factory/agent/productions/_index/_card.html+phone.erb
+++ b/app/views/factory/agent/productions/_index/_card.html+phone.erb
@@ -12,7 +12,7 @@
   <% if item = @cart && @cart.find_item(good_id: model.id) %>
     <%= render partial: 'cart_big', locals: { cart: @cart, item_con: item_con, item: item } %>
   <% else %>
-    <%= render partial: 'add_cart_big', locals: { cart: @cart, model: model, item_con: item_con } %>
+    <%= render partial: 'add_cart_auto', locals: { cart: @cart, model: model, item_con: item_con } %>
   <% end %>
   </div>
 </div>
