--- a/app/views/factory/admin/production_items/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/production_items/_base/_index_thead.html.erb
@@ -1,3 +1,4 @@
 <th><%= Factory::ProductionItem.human_attribute_name(:code) %></th>
 <th><%= Factory::ProductionItem.human_attribute_name(:state) %></th>
+<th><%= Factory::ProductionItem.human_attribute_name(:amount) %></th>
 <th><%= Factory::ProductionItem.human_attribute_name(:came_at) %></th>
