--- a/app/views/factory/admin/productions/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_base/_index_tbody.html.erb
@@ -1,5 +1,5 @@
 <td>
-  <%= link_to({ action: 'show', id: model.id }, class: 'is-several') do %>
+  <%= link_to({ controller: 'production_items', production_id: model.id }, class: 'is-several') do %>
     <%= image_tag model.logo, class: 'image is-24x24' if model.logo.attached? %>
     <span><%= model.name %></span>
   <% end %>
