--- a/app/views/factory/productions/_show/_breadcrumb.html.erb
+++ b/app/views/factory/productions/_show/_breadcrumb.html.erb
@@ -1,2 +1,2 @@
-<li><%= link_to t('factory.products.index.title'), { controller: 'productions' } %></li>
+<li><%= link_to t('.productions.index.title'), { controller: 'productions' } %></li>
 <li class="is-active"><%= @production.name %></li>
