--- a/app/views/layouts/agent.html.erb
+++ b/app/views/layouts/agent.html.erb
@@ -2,7 +2,11 @@
   <%= render 'nav_bar' %>
   <%= render 'alert' %>
   <main class="container pt-4">
-    <%= render 'breadcrumb' %>
+    <div class="breadcrumb has-succeeds-separator">
+      <ul>
+        <%= render 'breadcrumb' %>
+      </ul>
+    </div>
     <div class="columns">
       <%= yield %>
     </div>
