--- a/app/views/factory/in/productions/_index/_index_tfoot.html.erb
+++ b/app/views/factory/in/productions/_index/_index_tfoot.html.erb
@@ -7,7 +7,7 @@
       </div>
     </th>
     <th class="has-text-centered">
-      <%= link_to({ controller: 'trade/in/orders', action: 'new', current_cart_id: @cart.id, **params.permit!.slice('factory_taxon_id') }, class: 'button is-success') do %>
+      <%= link_to({ controller: 'trade/in/orders', action: 'cart', current_cart_id: @cart.id, **params.permit!.slice('factory_taxon_id') }, class: 'button is-success') do %>
         <i class="fa-solid fa-credit-card"></i>
         <span class="pl-1"><%= t('factory.in.orders.new.title') %></span>
       <% end %>
