--- a/app/views/factory/admin/product_taxons/_edit_form.html.erb
+++ b/app/views/factory/admin/product_taxons/_edit_form.html.erb
@@ -1,11 +1,11 @@
-<%= form_with model: @product_taxon, url: { action: 'create', **params.permit(:factory_taxon_id) }, class: 'modal-card' do |f| %>
+<%= form_with model: @product_taxon, url: { action: 'update', **params.permit(:factory_taxon_id) }, class: 'modal-card' do |f| %>
   <header class="modal-card-head">
     <p class="modal-card-title"><%= t('.title') %></p>
     <button type="button" data-action="modal#close" class="delete"></button>
   </header>
   <section class="modal-card-body">
     <%= render 'error_messages', target: f.object %>
-    <%= f.hidden_field :factory_taxon_id %>
+    <%= f.collection_select :factory_taxon_id, @factory_taxons, :id, :name %>
     <%= render partial: 'form', locals: { f: f } %>
   </section>
   <footer class="modal-card-foot">
