--- a/app/views/factory/admin/provides/index.html.erb
+++ b/app/views/factory/admin/provides/index.html.erb
@@ -1,5 +1,6 @@
 <%= render 'product_taxon_bar' %>
 <%= render 'index_bar' %>
+<%= render 'index_actions' %>
 
 <%= render layout: 'index_table' do %>
   <%= render partial: 'index_tbody', layout: 'index_tr', collection: @provides, as: :model %>
