--- a/app/views/factory/admin/product_taxons/_base/_production_tr.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_production_tr.html.erb
@@ -2,7 +2,7 @@
   <%= yield %>
   <td>
     <div data-show-target="item" style="visibility: hidden">
-      <%= link_to({ controller: 'productions', action: 'show', product_id: model.product_id, id: model.id }, aria: { label: t('.show.title') }, class: 'button is-small is-rounded is-light') do %>
+      <%= button_to({ controller: 'productions', action: 'show', product_id: model.product_id, id: model.id }, aria: { label: t('.productions.show.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-circle-info has-text-info"></i>
       <% end %>
     </div>
