support edit with wallet

--- a/app/views/factory/admin/productions/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_base/_index_tbody.html.erb
@@ -36,7 +36,7 @@
 <td>
   <div>
   <% model.card_price.each do |key, value| %>
-    <div class="tags has-addons control mb-0">
+    <div class="tags has-addons is-tag-price control mb-0">
       <div class="tag is-success"><%= key %></div>
       <div class="tag is-light"><%= value.to_money.format.html_safe %></div>
     </div>
