--- a/app/views/factory/admin/product_taxons/_index/_index_table.html+phone.erb
+++ b/app/views/factory/admin/product_taxons/_index/_index_table.html+phone.erb
@@ -1,7 +1,5 @@
-<div class="weui-panel">
-  <div class="weui-panel__hd"><%= t('.title') %></div>
+<div class="weui-panel is-box">
   <div class="weui-panel__bd">
     <%= yield %>
   </div>
-  <div class="weui-panel__ft"></div>
 </div>
