--- a/app/views/factory/admin/product_taxons/index.html+phone.erb
+++ b/app/views/factory/admin/product_taxons/index.html+phone.erb
@@ -1,7 +1,7 @@
 <%= render 'top_bar' %>
 
 <%= render layout: 'index_table' do %>
-  <% @product_taxons.group_by(&:factory_taxon).each do |taxon, product_taxons| %>
+  <% @product_taxons.each do |taxon, product_taxons| %>
     <%= render partial: 'taxon_tbody', locals: { taxon: taxon, size: product_taxons.size + 1 } if taxon %>
     <%= render partial: 'index_tbody', layout: 'index_tr', collection: product_taxons, as: :model %>
   <% end %>
