--- a/app/views/factory/admin/product_taxons/_index/_index_tbody.html+phone.erb
+++ b/app/views/factory/admin/product_taxons/_index/_index_tbody.html+phone.erb
@@ -1,5 +1,7 @@
 <%= link_to({ controller: 'products', product_taxon_id: model.id }, class: 'is-several') do %>
   <%= image_tag model.logo, class: 'image is-32x32' if model.logo.attached? %>
   <span><%= model.name %></span>
-  <span class="tag"><%= model.scene.title %></span>
+  <% if model.scene %>
+    <span class="tag"><%= model.scene.title %></span>
+  <% end %>
 <% end %>
