--- a/app/views/factory/admin/taxon/products/_index/_index_item_actions.html+phone.erb
+++ b/app/views/factory/admin/taxon/products/_index/_index_item_actions.html+phone.erb
@@ -1,11 +1,11 @@
-<div class="weui-media-box weui-media-box_appmsg">
-  <div data-controller="empty" class="weui-media-box__hd">
+<div class="media">
+  <div data-controller="empty" class="media-left">
     <%= image_tag model.logo.variant(resize_to_limit: [80, 80]), class: 'image is-64x64' if model.logo.attached? %>
   </div>
-  <div class="weui-media-box__bd">
+  <div class="media-content">
     <%= yield %>
   </div>
-  <div class="weui-media-box__ft">
+  <div class="media-right as-x">
     <%= button_to({ action: 'actions', id: model.id }, class: 'button is-borderless') do %>
       <i class="fa-solid fa-lg fa-ellipsis-h"></i>
     <% end %>
