--- a/app/views/factory/admin/addresses/_show_table.html.erb
+++ b/app/views/factory/admin/addresses/_show_table.html.erb
@@ -1,24 +1,24 @@
 <tr>
-  <td class="has-text-right"><%= Address.human_attribute_name(:area) %></td>
+  <td><%= Address.human_attribute_name(:area) %></td>
   <td><%= @address.area %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Address.human_attribute_name(:detail) %></td>
+  <td><%= Address.human_attribute_name(:detail) %></td>
   <td><%= @address.detail %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Address.human_attribute_name(:contact) %></td>
+  <td><%= Address.human_attribute_name(:contact) %></td>
   <td><%= @address.contact %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Address.human_attribute_name(:tel) %></td>
+  <td><%= Address.human_attribute_name(:tel) %></td>
   <td><%= @address.tel %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Address.human_attribute_name(:post_code) %></td>
+  <td><%= Address.human_attribute_name(:post_code) %></td>
   <td><%= @address.post_code %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Address.human_attribute_name(:source) %></td>
+  <td><%= Address.human_attribute_name(:source) %></td>
   <td><%= @address.source %></td>
 </tr>
