--- a/app/views/factory/admin/product_hosts/_show_table.html.erb
+++ b/app/views/factory/admin/product_hosts/_show_table.html.erb
@@ -1,17 +1,17 @@
 <tr>
-  <td class="has-text-right"><%= Factory::Product.human_attribute_name(:name) %></td>
+  <td><%= Factory::Product.human_attribute_name(:name) %></td>
   <td><%= @product.name %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Factory::Product.human_attribute_name(:qr_prefix) %></td>
+  <td><%= Factory::Product.human_attribute_name(:qr_prefix) %></td>
   <td><%= @product.qr_prefix %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Factory::Product.human_attribute_name(:description) %></td>
+  <td><%= Factory::Product.human_attribute_name(:description) %></td>
   <td><%= @product.description %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Factory::Product.human_attribute_name(:covers) %></td>
+  <td><%= Factory::Product.human_attribute_name(:covers) %></td>
   <td>
     <div class="is-flex">
       <%= render 'com/attachments/list', target: @product.covers %>
@@ -19,7 +19,7 @@
   </td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Factory::Product.human_attribute_name(:images) %></td>
+  <td><%= Factory::Product.human_attribute_name(:images) %></td>
   <td>
     <div class="is-flex">
     <% @product.images.each do |image| %>
