--- a/app/views/factory/admin/product_part_taxons/_show_table.html.erb
+++ b/app/views/factory/admin/product_part_taxons/_show_table.html.erb
@@ -1,12 +1,12 @@
 <tr>
-  <td class="has-text-right"><%= Factory::ProductPartTaxon.human_attribute_name(:name) %></td>
+  <td><%= Factory::ProductPartTaxon.human_attribute_name(:name) %></td>
   <td><%= @product_part_taxon.name %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Factory::ProductPartTaxon.human_attribute_name(:min_select) %></td>
+  <td><%= Factory::ProductPartTaxon.human_attribute_name(:min_select) %></td>
   <td><%= @product_part_taxon.min_select %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Factory::ProductPartTaxon.human_attribute_name(:max_select) %></td>
+  <td><%= Factory::ProductPartTaxon.human_attribute_name(:max_select) %></td>
   <td><%= @product_part_taxon.max_select %></td>
 </tr>
