--- a/app/views/factory/admin/provides/_show_table.html.erb
+++ b/app/views/factory/admin/provides/_show_table.html.erb
@@ -1,4 +1,4 @@
 <tr>
-  <td class="has-text-right"><%= Factory::Provide.human_attribute_name(:provider_id) %></td>
+  <td><%= Factory::Provide.human_attribute_name(:provider_id) %></td>
   <td><%= @provide.provider_id %></td>
 </tr>
