--- a/app/views/factory/admin/purchase_items/_show_table.html.erb
+++ b/app/views/factory/admin/purchase_items/_show_table.html.erb
@@ -1,20 +1,20 @@
 <tr>
-  <td class="has-text-right"><%= Trade::Item.human_attribute_name(:number) %></td>
+  <td><%= Trade::Item.human_attribute_name(:number) %></td>
   <td><%= @item.number %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Trade::Item.human_attribute_name(:amount) %></td>
+  <td><%= Trade::Item.human_attribute_name(:amount) %></td>
   <td><%= @item.amount %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Trade::Item.human_attribute_name(:note) %></td>
+  <td><%= Trade::Item.human_attribute_name(:note) %></td>
   <td><%= @item.note %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Trade::Item.human_attribute_name(:extra) %></td>
+  <td><%= Trade::Item.human_attribute_name(:extra) %></td>
   <td><%= @item.extra %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Trade::Item.human_attribute_name(:purchase_status) %></td>
+  <td><%= Trade::Item.human_attribute_name(:purchase_status) %></td>
   <td><%= @item.purchase_status_i18n %></td>
 </tr>
