--- a/app/views/factory/admin/scenes/_show_table.html.erb
+++ b/app/views/factory/admin/scenes/_show_table.html.erb
@@ -1,28 +1,28 @@
 <tr>
-  <td class="has-text-right"><%= Factory::Scene.human_attribute_name(:title) %></td>
+  <td><%= Factory::Scene.human_attribute_name(:title) %></td>
   <td><%= @scene.title %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Factory::Scene.human_attribute_name(:book_start_days) %></td>
+  <td><%= Factory::Scene.human_attribute_name(:book_start_days) %></td>
   <td><%= @scene.book_start_days %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Factory::Scene.human_attribute_name(:book_start_at) %></td>
+  <td><%= Factory::Scene.human_attribute_name(:book_start_at) %></td>
   <td><%= @scene.book_start_at.to_fs(:time) %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Factory::Scene.human_attribute_name(:book_finish_days) %></td>
+  <td><%= Factory::Scene.human_attribute_name(:book_finish_days) %></td>
   <td><%= @scene.book_finish_days %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Factory::Scene.human_attribute_name(:book_finish_at) %></td>
+  <td><%= Factory::Scene.human_attribute_name(:book_finish_at) %></td>
   <td><%= @scene.book_finish_at.to_fs(:time) %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Factory::Scene.human_attribute_name(:deliver_start_at) %></td>
+  <td><%= Factory::Scene.human_attribute_name(:deliver_start_at) %></td>
   <td><%= @scene.deliver_start_at.to_fs(:time) %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Factory::Scene.human_attribute_name(:deliver_finish_at) %></td>
+  <td><%= Factory::Scene.human_attribute_name(:deliver_finish_at) %></td>
   <td><%= @scene.deliver_finish_at.to_fs(:time) %></td>
 </tr>
