--- a/app/views/factory/panel/brands/_show_table.html.erb
+++ b/app/views/factory/panel/brands/_show_table.html.erb
@@ -1,12 +1,12 @@
 <tr>
-  <td class="has-text-right"><%= Factory::Brand.human_attribute_name(:name) %></td>
+  <td><%= Factory::Brand.human_attribute_name(:name) %></td>
   <td><%= @brand.name %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Factory::Brand.human_attribute_name(:products_count) %></td>
+  <td><%= Factory::Brand.human_attribute_name(:products_count) %></td>
   <td><%= @brand.products_count %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Factory::Brand.human_attribute_name(:organ_id) %></td>
+  <td><%= Factory::Brand.human_attribute_name(:organ_id) %></td>
   <td><%= @brand.organ_id %></td>
 </tr>
