--- a/app/views/factory/panel/serials/_show_table.html.erb
+++ b/app/views/factory/panel/serials/_show_table.html.erb
@@ -1,4 +1,4 @@
 <tr>
-  <td class="has-text-right"><%= Factory::Serial.human_attribute_name(:name) %></td>
+  <td><%= Factory::Serial.human_attribute_name(:name) %></td>
   <td><%= @serial.name %></td>
 </tr>
