--- a/app/views/factory/panel/unifiers/_show_table.html.erb
+++ b/app/views/factory/panel/unifiers/_show_table.html.erb
@@ -1,8 +1,8 @@
 <tr>
-  <td class="has-text-right"><%= Factory::Unifier.human_attribute_name(:name) %></td>
+  <td><%= Factory::Unifier.human_attribute_name(:name) %></td>
   <td><%= @unifier.name %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Factory::Unifier.human_attribute_name(:code) %></td>
+  <td><%= Factory::Unifier.human_attribute_name(:code) %></td>
   <td><%= @unifier.code %></td>
 </tr>
