--- a/app/views/factory/admin/production_items/_actions.html+phone.erb
+++ b/app/views/factory/admin/production_items/_actions.html+phone.erb
@@ -13,8 +13,8 @@
   data-action="click->mini-program#link"
   class="weui-actionsheet__cell"
 >
-  <%= button_to({ action: 'print', id: model.id }, method: :patch) do %>
-    <i class="fa-regular fa-print"></i>
+  <%= button_to({ action: 'print', id: model.id }, method: :patch, class: 'has-text-primary') do %>
+    <i class="fa-solid fa-print"></i>
     <span><%= t('factory.admin.production_items.print.title') %></span>
   <% end %>
 </div>
