--- a/app/views/factory/admin/production_items/_index/_button.html+phone.erb
+++ b/app/views/factory/admin/production_items/_index/_button.html+phone.erb
@@ -1,6 +1,6 @@
 <%= form_with theme: nil, model: @production_item, url: { action: 'create' }, class: 'weui-btn_cell weui-btn_cell-primary is-bordered' do |f| %>
   <%= f.hidden_field :code %>
-  <%= f.hidden_field :produced_at, value: Time.current.to_s(:local) %>
+  <%= f.hidden_field :produced_at, value: Time.current.to_fs(:local) %>
   <%= f.submit '新增' %>
 <% end %>
 <%= form_with theme: nil, model: @production_item, url: { action: 'batch' }, class: 'weui-btn_cell weui-btn_cell-primary is-bordered' do |f| %>
