--- a/app/views/factory/admin/product_taxons/index.html+phone.erb
+++ b/app/views/factory/admin/product_taxons/index.html+phone.erb
@@ -1,8 +1,10 @@
 <%= render 'top_bar' %>
 
-<%= render layout: 'index_list' do %>
-  <% @product_taxons.each do |taxon, product_taxons| %>
-    <%= render partial: 'taxon_tbody', locals: { taxon: taxon, size: product_taxons.size + 1 } if taxon %>
-    <%= render partial: 'index_tbody', layout: 'index_item_actions', collection: product_taxons, as: :model %>
+<div class="m-3">
+<% @product_taxons.each do |taxon, product_taxons| %>
+  <%= render layout: 'index_list' do %>
+    <%= render partial: 'taxon_item', locals: { taxon: taxon, size: product_taxons.size + 1 } if taxon %>
+    <%= render partial: 'index_item', layout: 'index_item_actions', collection: product_taxons, as: :model %>
   <% end %>
 <% end %>
+</div>
